chore: Fix local SonarQube not reporting mutation analysis results (because the necessary XML report was not being generated) chore: Update local SonarQube rules (add new ones, remove duplicate mutation analysis rules) chore: Update local SonarQube version refactor: Refactor code to meet newest code quality standards test: Increase frontend code coverage feat: Rename WebSocket Messages to Events on frontend